@@ -979,11 +979,7 @@ Namespace App
                         Exit Sub
                     End If
 
-                    Try
-                        File.Copy(conL.ConnectionFileName, conL.ConnectionFileName & "_BAK", True)
-                    Catch ex As Exception
-                        MessageCollector.AddMessage(Messages.MessageClass.WarningMsg, My.Language.strConnectionsFileBackupFailed & vbNewLine & vbNewLine & ex.Message)
-                    End Try
+                    CreateBackupFile(conL.ConnectionFileName)
                 End If
 
                 conL.ConnectionList = ConnectionList
@@ -1039,6 +1035,39 @@ Namespace App
                     End If
                 End If
             End Try
+        End Sub
+
+        Protected Shared Sub CreateBackupFile(ByVal fileName As String)
+            ' This intentionally doesn't prune any existing backup files. We just assume the user doesn't want any new ones created.
+            If My.Settings.BackupFileKeepCount = 0 Then Return
+
+            Try
+                Dim backupFileName As String = String.Format(My.Settings.BackupFileNameFormat, fileName, DateTime.UtcNow)
+                File.Copy(fileName, backupFileName)
+                PruneBackupFiles(fileName)
+            Catch ex As Exception
+                MessageCollector.AddMessage(MessageClass.WarningMsg, My.Language.strConnectionsFileBackupFailed & vbNewLine & vbNewLine & ex.Message)
+                Throw
+            End Try
+        End Sub
+
+        Protected Shared Sub PruneBackupFiles(ByVal baseName As String)
+            Dim fileName = Path.GetFileName(baseName)
+            Dim directoryName = Path.GetDirectoryName(baseName)
+
+            If String.IsNullOrEmpty(fileName) Or String.IsNullOrEmpty(directoryName) Then Return
+
+            Dim searchPattern As String = String.Format(My.Settings.BackupFileNameFormat, fileName, "*")
+            Dim files As String() = Directory.GetFiles(directoryName, searchPattern)
+
+            If files.Length <= My.Settings.BackupFileKeepCount Then Return
+
+            Array.Sort(files)
+            Array.Resize(files, files.Length - My.Settings.BackupFileKeepCount)
+
+            For Each file As String In files
+                IO.File.Delete(file)
+            Next
         End Sub
 
         Protected Shared Function GetStartupConnectionFileName() As String
