@@ -512,5 +512,11 @@
     <Setting Name="SQLDatabaseName" Provider="mRemoteNG.Config.Settings.Providers.ChooseProvider" Type="System.String" Scope="User">
       <Value Profile="(Default)">mRemoteNG</Value>
     </Setting>
+    <Setting Name="BackupFileKeepCount" Provider="mRemoteNG.Config.Settings.Providers.ChooseProvider" Roaming="true" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">10</Value>
+    </Setting>
+    <Setting Name="BackupFileNameFormat" Provider="mRemoteNG.Config.Settings.Providers.ChooseProvider" Roaming="true" Type="System.String" Scope="User">
+      <Value Profile="(Default)">{0}.{1:yyyyMMdd-HHmmssffff}.backup</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
