@@ -552,6 +552,12 @@
             <setting name="SQLDatabaseName" serializeAs="String">
                 <value>mRemoteNG</value>
             </setting>
+            <setting name="BackupFileKeepCount" serializeAs="String">
+                <value>10</value>
+            </setting>
+            <setting name="BackupFileNameFormat" serializeAs="String">
+                <value>{0}.{1:yyyyMMdd-HHmmssffff}.backup</value>
+            </setting>
         </mRemoteNG.My.MySettings>
     </userSettings>
     <applicationSettings>
